--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>pand.com</groupId>
   <artifactId>myProject</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>myProject Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -13,6 +13,11 @@
   </properties>
   
   <dependencies>
+  	<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework.version}</version>
+		</dependency>
   	<dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-webmvc</artifactId>
@@ -139,31 +144,44 @@
 	    <scope>provided</scope>
 	</dependency>
 	
-   <!-- dubbo -->  
-    <dependency>  
-      <groupId>com.alibaba</groupId>  
-      <artifactId>dubbo</artifactId>  
-      <version>2.5.3</version>  
-    </dependency>  
-    <!-- zkclient  -->  
-    <dependency>  
-      <groupId>com.github.sgroschupf</groupId>  
-      <artifactId>zkclient</artifactId>  
-      <version>0.1</version>  
-    </dependency>  
-    <!--  zookeeper -->  
-    <dependency>  
-      <groupId>org.apache.zookeeper</groupId>  
-      <artifactId>zookeeper</artifactId>  
-      <version>3.3.6</version>  
-    </dependency>  
-    
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+   <!-- junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- dubbo -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dubbo</artifactId>
+            <version>2.5.3</version>
+        </dependency>
+
+        <!-- spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>4.3.3.RELEASE</version>
+        </dependency>
+
+        <!-- zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.2-alpha</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.sgroschupf</groupId>
+            <artifactId>zkclient</artifactId>
+            <version>0.1</version>
+        </dependency>
   </dependencies>
   <build>
     <finalName>myProject</finalName>
