dubbo服务端改善，spring启动

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>pand.com</groupId>
-  <artifactId>myProject</artifactId>
+  <artifactId>dubboDemoSer</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
   <name>myProject Maven Webapp</name>
@@ -184,6 +184,6 @@
         </dependency>
   </dependencies>
   <build>
-    <finalName>myProject</finalName>
+    <finalName>dubboDemoSer</finalName>
   </build>
 </project>
