--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
 	</dependency>
 	
 	<dependency>
+	    <groupId>commons-logging</groupId>
+	    <artifactId>commons-logging</artifactId>
+	    <version>1.2</version>
+	</dependency>
+	
+	
+	<dependency>
 	    <groupId>commons-fileupload</groupId>
 	    <artifactId>commons-fileupload</artifactId>
 	    <version>1.2.2</version>
@@ -165,11 +172,11 @@
             <artifactId>spring</artifactId>
             <version>2.5.6</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>4.3.3.RELEASE</version>
-        </dependency>
+        </dependency> -->
 
         <!-- zookeeper -->
         <dependency>
